<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:text="@string/price"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price_name"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:text="@string/quantity"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/substract_product"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:textSize="@dimen/string_size"
                android:text="@string/substracting"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/hint_quantity"
                android:layout_width="100dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_toRightOf="@id/substract_product"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/add_product"
                android:layout_toRightOf="@id/edit_quantity"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:textSize="@dimen/string_size"
                android:text="@string/adding"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Supplier Name category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:text="@string/supplier_name"
            style="@style/CategoryStyle" />


        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Supplier Name category -->
    <LinearLayout
        android:id="@+id/container_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:text="@string/phone_number"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="@dimen/phone_width"
                android:hint="@string/hint_phone_number"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/calling"
                android:layout_width="@dimen/width_call_button"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/call"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_toRightOf="@id/edit_phone_number"/>

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_upload"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:src="@drawable/ic_empty_box" />

        <Button
            android:id="@+id/button_image_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/upload_image"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </RelativeLayout>
</LinearLayout>
